src/main/fabric8/deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: wildfly-swarm-microservice
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    metadata:
      labels:
        app: wildfly-swarm-microservice
        deploymentconfig: wildfly-swarm-microservice
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_DIR
          value: /deployments
        - name: JAVA_OPTIONS
          value: -Dswarm.project.stage=production -Djava.net.preferIPv4Stack=true
        name: wildfly-swarm-microservice
        image: wildfly-swarm-microservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - wildfly-swarm-microservice
      from:
        kind: ImageStreamTag
        name: wildfly-swarm-microservice:latest
    type: ImageChange
