src/main/fabric8/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wildfly-swarm-microservice
  annotations:
    description: Inventory Service based on WF Swarm
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    deploymentconfig: wildfly-swarm-microservice
  type: LoadBalancer
