src/main/fabric8/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: wildfly-swarm-microservice
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: wildfly-swarm-microservice
